fix: Corrige o contraste das cores do botão cta.

--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -4,9 +4,13 @@
 
 /* Estilo do botão CTA no menu mobile */
 .cta-button {
-  background-color: var(--color-secondarybtm-base); /* Cor do botão CTA */
+  background-color: var(--color-secondarybt-base); /* Cor do botão CTA */
   margin: 0;
   border-radius: 0;
+}
+
+.nav-links li .cta-button {
+    color: var(--color-primary-dark);
 }
 
 @media (min-width: 768px) {
